workspace/log/build_2023-10-23_19-28-21/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:23:31: error: ‘ros2’ was not declared in this scope
   23 |         arming_client_ = this-ros2 mavros how to sent position command >create_client<mavros_msgs::srv::CommandBool>("mavros/cmd/arming");
      |                               ^~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_position_command(float, float, float, float)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:89:13: error: ‘publisher_’ was not declared in this scope; did you mean ‘rcl_publisher_t’?
   89 |             publisher_->publish(msg);
      |             ^~~~~~~~~~
      |             rcl_publisher_t
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_land_request()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:187:24: error: expected ‘;’ before ‘while’
  187 |     send_arming_request
      |                        ^
      |                        ;
  188 |         while (!arming_client_->wait_for_service(std::chrono::seconds(1))) {
      |         ~~~~~           
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:187:5: error: invalid use of non-static member function ‘void TemplateDroneControl::send_arming_request(bool)’
  187 |     send_arming_request
      |     ^~~~~~~~~~~~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:143:10: note: declared here
  143 |     void send_arming_request(bool arm)
      |          ^~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
